# glide

./: .env.example  .gitignore  README.md  dev.ts  globals.d.ts  package-lock.json  package.json  start.js  start.ts  test-llm.ts  translate.py  tsconfig.json
constitution/: ARCHITECTURE_PRINCIPLES.md  Anti_Self_Engineering_Spec.md  CONSTITUTION.md  CONSTITUTION_COMMENTARY.md  CONSTITUTION_Interpretations.md  Glide OS Constitution — Canonical Bilingual Edition.md  Glide OS Skill Constitution.md  NON_AGENCY_MANIFESTO.md  Normative_Hierarchy.md  UNIFIED_FIELD_MODEL.md  anti_architectural_reconstruction.md  architecture.md  architecture_principles.md  decision.md  glide-constitution-v2.md  glide-constitution.md  glide-os-manifesto.md  identity.md  learning.md  memory.md  safety.md
dispatcher/: dispatcher.ts  human-gate.ts  policy-gate.ts  task-router.ts
docs/: Execution Contract v1.md  GLIDE_SESSION.md  Glide OS — Formal Runtime Spec v1.md  Glide OS — Kernel Stabilization v1.md  Glide Phase-0 系统体检（完整操作手册）.md  glide memo.md
governance/: approval-engine.ts  authority.types.ts  constitution-enforcer.ts  constitution-engine.ts  constitution-loader.ts  constitutional-violations.ts  policy-engine.ts
indexes/: knowledge.json
kernel/: bootstrap.ts  conscious-loop.ts  create-kernel.legacy.ts  event-bus.ts  event-types.ts  kernel.ts  loader.ts  policy-engine.ts  registry.ts  runtime-lock.ts  scheduler.ts  state.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/windows/: dashboard.rs
(+266 files in other folders)
