[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1.0", features = ["time", "macros", "rt-multi-thread"] }
tauri-plugin-os = "2.3.2"

# 跨平台全局鼠标坐标读取（用于热区穿透判定）
# Windows: GetCursorPos  macOS: NSEvent  Linux: XQueryPointer / libxdo
mouse_position = "0.1"
